# QPiano

./: BUILD.md  CMakeLists.txt  Changelog.txt  README.md  TODO.md  license.txt  pianobooster.desktop  qpiano.6  qpiano.desktop  qpiano.pro
doc/: README.md  faq.md  pianohints.md
src/: Bar.cpp  Bar.h  CMakeLists.txt  Cfg.cpp  Cfg.h  Chord.cpp  Chord.h  Conductor.cpp  Conductor.h  Draw.cpp  Draw.h  GlView.cpp  GlView.h  GuiKeyboardSetupDialog.cpp  GuiKeyboardSetupDialog.h  GuiLoopingPopup.cpp  GuiLoopingPopup.h  GuiMidiSetupDialog.cpp  GuiMidiSetupDialog.h  GuiPreferencesDialog.cpp  GuiPreferencesDialog.h  GuiSidePanel.cpp  GuiSidePanel.h  GuiSongDetailsDialog.cpp  GuiSongDetailsDialog.h  GuiTopBar.cpp  GuiTopBar.h  Merge.cpp  Merge.h  MidiDevice.cpp  MidiDevice.h  MidiDeviceBase.h  MidiDeviceFluidSynth.cpp  MidiEvent.h  (+36 more)
translations/: CMakeLists.txt  music_blank.ts  music_cs.ts  music_de.ts  music_es.ts  music_fr.ts  music_pl.ts  music_ru.ts  music_uk.ts  pianobooster_af.ts  pianobooster_am.ts  pianobooster_ar.ts  pianobooster_as.ts  pianobooster_ast.ts  pianobooster_az.ts  pianobooster_be.ts  pianobooster_bg.ts  pianobooster_bn.ts  pianobooster_br.ts  pianobooster_bs.ts  pianobooster_bs_BA.ts  pianobooster_ca.ts  pianobooster_crh.ts  pianobooster_cs.ts  pianobooster_csb.ts  pianobooster_cy.ts  pianobooster_da.ts  pianobooster_de.ts  pianobooster_dz.ts  pianobooster_el.ts  pianobooster_eo.ts  pianobooster_es.ts  pianobooster_et.ts  pianobooster_eu.ts  pianobooster_fa.ts  pianobooster_fi.ts  pianobooster_fo.ts  pianobooster_fr.ts  pianobooster_frp.ts  pianobooster_fur.ts  (+162 more)
(+52 files in other folders)
